syntax = "proto3";

package payment.v1alpha;

import "google/protobuf/timestamp.proto";

message Order {
  int32 id = 1;
  int32 userId = 2;
  int32 productId = 3;
  google.protobuf.Timestamp createdAt = 4;
  google.protobuf.Timestamp updatedAt = 5;
  repeated Item items = 6;
}

message Item {
  int32 id = 1;
  int32 productId = 2;
  int32 quantity = 3;
}

message ItemCreate {
  int32 productId = 2;
  int32 quantity = 3;
}

service PaymentCRUDService {
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse);
}

message GetOrderRequest {
  int32 id = 1;
}

message GetOrderResponse {
  Order order = 1;
}

message CreateOrderRequest {
  repeated ItemCreate items = 1;
}

message CreateOrderResponse {
  Order order = 1;
}

message UpdateOrderRequest {
  Order order = 1;
}

message UpdateOrderResponse {
  Order order = 1;
}

message DeleteOrderRequest {
  int32 id = 1;
}

message DeleteOrderResponse {
  Order order = 1;
}