syntax = "proto3";

package product.v1alpha;

message Product {
  int32 id = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
  int32 quantity = 5;
}

service ProductCRUDService {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Add (AddRequest) returns (AddResponse);
  rpc Update (UpdateRequest) returns (UpdateResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
}

message GetRequest {
  int32 id = 1;
  string name = 2;
}

message GetResponse {
  repeated Product products = 1;
}

message AddRequest {
  string name = 1;
  string description = 2;
  int32 price = 3;
  int32 quantity = 4;
}

message AddResponse {
  Product product = 1;
}

message UpdateRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  int32 price = 4;
  int32 quantity = 5;
}

message UpdateResponse {
  Product product = 1;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  Product product = 1;
}
